--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1 id="title">introdution to javascript</h1>
+
+    <h1 id="title">introdution to javascript!</h1>
     <img id="image" class="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPJpK-JMttVWd-iCTsE7vu8nkLmJwyJXEahQ&s" alt="">
     <button onclick="getalert()">meni bas jane kabarlama</button>
     <button onclick="changecolor()">озгерту</button>
