--- a/week-15/index.html
+++ b/week-15/index.html
@@ -8,19 +8,40 @@
 </head>
 
 <body>
-        <h1 id="contener" >Introduction to DOM</h1>
-    <!-- <p class="text">Lor.</p>
+    <!-- <h1 id="contener" >Introduction to DOM</h1>
+     <p class="text">Lor.</p>
     <p class="text">coog job</p>
     <div id="qorap">qorap</div> -->
-    <h2>Мен туралы акпарат:</h2>
+    <!-- <h2>Мен туралы акпарат:</h2>
     <p id="text">Mametova Elnura</p>
-    <ul ><b>
-            <li class="my">Coding</li>
+    <ul ><b> -->
+    <!-- <li class="my">Coding</li>
             <li class="my">teaching</li>
             <li class="my">reading</li>
         </b>
+    </ul> -->
+    <!-- Events-11.12.2024 -->
+<!-- 
+    <h1 id="title">Mouse events</h1>
+    <button id="button" onclick="buttonClick()">Click me</button>
+
+
+    <div id="box" style="width: 200px;height: 200px; border: 1px solid black;"></div>
+ -->
+   <!-- tapsirma-1 -->
+
+   <button id="myButton">button</button>
+    <div id="box" style="width: 200px;height: 200px; border: 1px solid black;">
+    </div>
+    <ul>
+        <li class="itemList">Element1</li>
+        <li class="itemList">Element2</li>
+        <li class="itemList">Element3</li>
     </ul>
+
+
     <script src="js.js"></script>
 </body>
+
 
 </html>
