--- a/week-15/index12.html
+++ b/week-15/index12.html
@@ -27,9 +27,21 @@
     <!-- 
     <input type="range"id="input-text" min="0">
     <p id="text" style="color: red;"></p> -->
-
+<!-- sirma -N-1 -->
+    <!-- <h1>Тіркелу формасы</h1>
+    <form
+        taprm id="signupForm">
+        <label for="">Name:</label>
+        <input type="text" id="username" placeholder="Atyniz"><br><br>
+       <label for="">email:</label>
+        <input type="email" id="email" placeholder="email____@gmail.com"><br><br>
+       <label for="">password:</label>
+        <input type="password" id="password" placeholder="password"><br><br>
+        <button type="submit">registration</button><br>
+    </form>
+    <p id="formMessage" style="color: red;"></p>  -->
     <!-- hw--12.12.2024---- -->
-
+<!-- 
     <h1>ACS-ке анонимди пикир калдыру формасы</h1>
     <form id="form">
         <p>topbindy tanda:</p>
@@ -37,10 +49,10 @@
             <option value="top">Tobinizdi tandaniz</option>
             <option value="top-1">top:24/2</option>
             <option value="oz tobim">top:24/4</option>
-        </select><br>
+        </select><br> -->
 
         <!-- <textarea - submit  -->
-        <p>Pikis qaldyr:</p>
+        <!-- <p>Pikis qaldyr:</p>
         <textarea id="comment" placeholder="Pikir kaldir!15-element">
         
     </textarea>
@@ -52,7 +64,7 @@
         <p id="type"></p>
         <button>send</button>
     </form>
-
+ -->
 
     <script src="js12.js"></script>
 
